--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/upgrade": "^8.0.0",
     "angular-in-memory-web-api": "^0.9.0",
     "core-js": "^2.5.4",
+    "ng-starrating": "^1.0.11",
     "rxjs": "^6.5.1",
     "zone.js": "~0.9.1"
   },
